--- a/index.html
+++ b/index.html
@@ -1,1 +1,246 @@
-testes
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>CowboySmall Research</title>
+
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom styles for this template -->
+  <link href="css/business-frontpage.css" rel="stylesheet">
+  <!--
+  <link href="css/bootstrap-social.css" rel="stylesheet">
+  -->
+
+</head>
+
+<body>
+
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="http://cowboysmall.com">CowboySmall</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="http://cowboysmall.com">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="http://blog.cowboysmall.com">Blog</a>
+          </li>
+          <!--
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+          -->
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Header -->
+  <header class="bg-primary py-5 mb-5">
+    <div class="container h-100">
+      <div class="row h-100 align-items-center">
+        <div class="col-lg-12">
+          <h1 class="display-4 text-white mt-5 mb-2">CowboySmall Research</h1>
+          <p class="lead mb-5 text-white-50">Some examples of my research.</p>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <!-- Page Content -->
+  <div class="container">
+
+    <div class="row">
+      <div class="col-md-8 mb-5">
+        <h2>About</h2>
+        <hr>
+        <p>I am Jerry Kiely, an Irish software engineer with over 20 years of experience. I code in Java, Python, Scala, Kotlin, Clojure, Groovy, R, Julia, Ruby, Go, C++, C, etc.</p>
+        <a class="btn btn-primary btn-lg" href="#">More Info &raquo;</a>
+      </div>
+      <div class="col-md-4 mb-5">
+        <h2>Contact</h2>
+        <hr>
+        <address>
+          <strong>CowboySmall</strong>
+          <br>Dublin
+          <br>Ireland
+          <br>
+        </address>
+        <address>
+          <abbr title="Phone">P:</abbr>
+          087 284 4858
+          <br>
+          <abbr title="Email">E:</abbr>
+          <a href="mailto:#">jerry@cowboysmall.com</a>
+        </address>
+      </div>
+    </div>
+    <!-- /.row -->
+
+    <div class="row">
+      <div class="col-md-4 mb-5">
+        <div class="card h-100">
+          <img class="card-img-top thumb" src="images/research_01.png" alt="">
+          <div class="card-body">
+            <h4 class="card-title">Location, Location, Location</h4>
+            <p class="card-text">America seems to be a country divided - along cultural, political, and religious lines to name a few. Or is it?</p>
+          </div>
+          <div class="card-footer">
+            <a href="research/research_01.html" class="btn btn-primary">Find Out More!</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-5">
+        <div class="card h-100">
+          <img class="card-img-top thumb" src="images/research_02.png" alt="">
+          <div class="card-body">
+            <h4 class="card-title">Analyzing Data From A Personal Activity Monitoring Device</h4>
+            <p class="card-text">It is now possible to collect a large amount of data about personal movement using activity monitoring devices such as a Fitbit, Nike Fuelband, or Jawbone Up.</p>
+          </div>
+          <div class="card-footer">
+            <a href="research/research_02.html" class="btn btn-primary">Find Out More!</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-5">
+        <div class="card h-100">
+          <img class="card-img-top thumb" src="images/research_03.png" alt="">
+          <div class="card-body">
+            <h4 class="card-title">Analyzing Severe Weather Events In The United States</h4>
+            <p class="card-text">In this project we will perform a basic analysis of the effect of severe weather events, in both the public health and economic senses, on the community.</p>
+          </div>
+          <div class="card-footer">
+            <a href="research/research_03.html" class="btn btn-primary">Find Out More!</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /.row -->
+
+    <div class="row">
+      <div class="col-md-4 mb-5">
+        <div class="card h-100">
+          <img class="card-img-top thumb" src="images/research_04.png" alt="">
+          <div class="card-body">
+            <h4 class="card-title">A Simulation Exercise</h4>
+            <p class="card-text">Our simulation will draw 40 samples from an exponentially distributed population. It will construct both a set of means of these samples, and a normalized set of means of these samples.</p>
+          </div>
+          <div class="card-footer">
+            <a href="research/research_04.html" class="btn btn-primary">Find Out More!</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-5">
+        <div class="card h-100">
+          <img class="card-img-top thumb" src="images/research_05.png" alt="">
+          <div class="card-body">
+            <h4 class="card-title">The Effect of Vitamin C on Tooth Growth in Guinea Pigs</h4>
+            <p class="card-text">We will perform an analysis of this data to see if there are any significant differences in tooth growth for the different delivery methods across dosages.</p>
+          </div>
+          <div class="card-footer">
+            <a href="research/research_05.html" class="btn btn-primary">Find Out More!</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-5">
+        <div class="card h-100">
+          <img class="card-img-top thumb" src="images/research_06.png" alt="">
+          <div class="card-body">
+            <h4 class="card-title">Motor Trend: an analysis of the factors that influence MPG</h4>
+            <p class="card-text">In this article we will examine some statistics relating to a set of cars to see if we can make predictions about fuel consumption (MPG).</p>
+          </div>
+          <div class="card-footer">
+            <a href="research/research_06.html" class="btn btn-primary">Find Out More!</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /.row -->
+
+    <div class="row">
+      <div class="col-md-4 mb-5">
+        <div class="card h-100">
+          <img class="card-img-top thumb" src="images/research_07.png" alt="">
+          <div class="card-body">
+            <h4 class="card-title">Predicting The Manner Of Exercise</h4>
+            <p class="card-text">Human Activity Recognition has emerged as a key research area in the last years and is gaining increasing attention by the pervasive computing research community.</p>
+          </div>
+          <div class="card-footer">
+            <a href="research/research_07.html" class="btn btn-primary">Find Out More!</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-5">
+        <div class="card h-100">
+          <img class="card-img-top thumb" src="images/research_08.png" alt="">
+          <div class="card-body">
+            <h4 class="card-title">The Bootstrap</h4>
+            <p class="card-text">Bootstrapping is the practice of estimating properties of an estimator (such as its variance) by measuring those properties when sampling from an approximating distribution.</p>
+          </div>
+          <div class="card-footer">
+            <a href="research/research_08.html" class="btn btn-primary">Find Out More!</a>
+          </div>
+        </div>
+      </div>
+      <!--
+      <div class="col-md-4 mb-5">
+        <div class="card h-100">
+          <img class="card-img-top thumb" src="" alt="">
+          <div class="card-body">
+            <h4 class="card-title"></h4>
+            <p class="card-text"></p>
+          </div>
+          <div class="card-footer">
+            <a href="" class="btn btn-primary">Find Out More!</a>
+          </div>
+        </div>
+      </div>
+      -->
+    </div>
+    <!-- /.row -->
+
+  </div>
+  <!-- /.container -->
+
+  <!-- Footer -->
+  <footer class="py-5 bg-dark">
+    <div class="container">
+      <p class="m-0 text-center text-white">Copyright &copy; CowboySmall 2019</p>
+    </div>
+    <!-- /.container -->
+  </footer>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!--
+  <script src="https://kit.fontawesome.com/38e7c0878e.js"></script>
+  -->
+
+</body>
+
+</html>
