--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
   <title>CowboySmall Research</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
 
   <!-- Custom styles for this template -->
-  <link href="css/business-frontpage.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/business-frontpage.css">
+  <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
   <!--
   <link href="css/bootstrap-social.css" rel="stylesheet">
   -->
