added lightbox for docs, etc.

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <p class="card-text">Bootstrapping is the practice of estimating properties of an estimator (such as its variance) by measuring those properties when sampling from an approximating distribution.</p>
           </div>
           <div class="card-footer">
-            <a href="research/research_08.html" data-title="The Bootstrap" data-width="1200" data-toggle="lightbox" class="btn btn-primary">Find Out More!</a>
+            <a href="research/research_08.html" data-title="The Bootstrap" data-width="1200" data-toggle="lightbox" data-disable-external-check="true" class="btn btn-primary">Find Out More!</a>
           </div>
         </div>
       </div>
