added lightbox for docs, etc.

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <p class="card-text">Bootstrapping is the practice of estimating properties of an estimator (such as its variance) by measuring those properties when sampling from an approximating distribution.</p>
           </div>
           <div class="card-footer">
-            <a href="research/research_08.html" data-toggle="lightbox" data-disable-external-check="true" class="btn btn-primary">Find Out More!</a>
+            <a href="research/research_08.html" data-title="The Bootstrap" data-toggle="lightbox" data-disable-external-check="true" data-width="1200" data-height="900" class="btn btn-primary">Find Out More!</a>
           </div>
         </div>
       </div>
@@ -128,7 +128,7 @@
             <p class="card-text">Human Activity Recognition has emerged as a key research area in the last years and is gaining increasing attention by the pervasive computing research community.</p>
           </div>
           <div class="card-footer">
-            <a href="research/research_07.html" data-toggle="lightbox" class="btn btn-primary">Find Out More!</a>
+            <a href="research/research_07.html" data-title="Predicting The Manner Of Exercise" data-toggle="lightbox" data-disable-external-check="true" data-width="1200" data-height="900" class="btn btn-primary">Find Out More!</a>
           </div>
         </div>
       </div>
