added lightbox for docs, etc.

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <p class="card-text">Bootstrapping is the practice of estimating properties of an estimator (such as its variance) by measuring those properties when sampling from an approximating distribution.</p>
           </div>
           <div class="card-footer">
-            <a href="research/research_08.html" data-toggle="lightbox" data-disable-external-check="true" data-height="768" data-width="1024" class="btn btn-primary">Find Out More!</a>
+            <a href="research/research_08.html" data-toggle="lightbox" data-disable-external-check="true" data-height="768" data-width="1024" class="btn btn-primary">Read</a>
           </div>
         </div>
       </div>
@@ -128,7 +128,7 @@
             <p class="card-text">Human Activity Recognition has emerged as a key research area in the last years and is gaining increasing attention by the pervasive computing research community.</p>
           </div>
           <div class="card-footer">
-            <a href="research/research_07.html" data-toggle="lightbox" data-disable-external-check="true" data-height="768" data-width="1024" class="btn btn-primary">Find Out More!</a>
+            <a href="research/research_07.html" data-toggle="lightbox" data-disable-external-check="true" data-height="768" data-width="1024" class="btn btn-primary">Read</a>
           </div>
         </div>
       </div>
@@ -140,7 +140,7 @@
             <p class="card-text">In this article we will examine some statistics relating to a set of cars to see if we can make predictions about fuel consumption (MPG).</p>
           </div>
           <div class="card-footer">
-            <a href="research/research_06.html" data-toggle="lightbox" data-disable-external-check="true" data-height="768" data-width="1024" class="btn btn-primary">Find Out More!</a>
+            <a href="research/research_06.html" data-toggle="lightbox" data-disable-external-check="true" data-height="768" data-width="1024" class="btn btn-primary">Read</a>
           </div>
         </div>
       </div>
@@ -157,7 +157,7 @@
             <p class="card-text">We will perform an analysis of this data to see if there are any significant differences in tooth growth for the different delivery methods across dosages.</p>
           </div>
           <div class="card-footer">
-            <a href="research/research_05.html" data-toggle="lightbox" data-disable-external-check="true" data-height="768" data-width="1024" class="btn btn-primary">Find Out More!</a>
+            <a href="research/research_05.html" data-toggle="lightbox" data-disable-external-check="true" data-height="768" data-width="1024" class="btn btn-primary">Read</a>
           </div>
         </div>
       </div>
@@ -169,7 +169,7 @@
             <p class="card-text">Our simulation will draw 40 samples from an exponentially distributed population. It will construct both a set of means of these samples, and a normalized set of means of these samples.</p>
           </div>
           <div class="card-footer">
-            <a href="research/research_04.html" data-toggle="lightbox" data-disable-external-check="true" data-height="768" data-width="1024" class="btn btn-primary">Find Out More!</a>
+            <a href="research/research_04.html" data-toggle="lightbox" data-disable-external-check="true" data-height="768" data-width="1024" class="btn btn-primary">Read</a>
           </div>
         </div>
       </div>
@@ -181,7 +181,7 @@
             <p class="card-text">In this project we will perform a basic analysis of the effect of severe weather events, in both the public health and economic senses, on the community.</p>
           </div>
           <div class="card-footer">
-            <a href="research/research_03.html" data-toggle="lightbox" data-disable-external-check="true" data-height="768" data-width="1024" class="btn btn-primary">Find Out More!</a>
+            <a href="research/research_03.html" data-toggle="lightbox" data-disable-external-check="true" data-height="768" data-width="1024" class="btn btn-primary">Read</a>
           </div>
         </div>
       </div>
@@ -198,7 +198,7 @@
             <p class="card-text">It is now possible to collect a large amount of data about personal movement using activity monitoring devices such as a Fitbit, Nike Fuelband, or Jawbone Up.</p>
           </div>
           <div class="card-footer">
-            <a href="research/research_02.html" data-toggle="lightbox" data-disable-external-check="true" data-height="768" data-width="1024" class="btn btn-primary">Find Out More!</a>
+            <a href="research/research_02.html" data-toggle="lightbox" data-disable-external-check="true" data-height="768" data-width="1024" class="btn btn-primary">Read</a>
           </div>
         </div>
       </div>
@@ -210,7 +210,7 @@
             <p class="card-text">America seems to be a country divided - along cultural, political, and religious lines to name a few. Or is it?</p>
           </div>
           <div class="card-footer">
-            <a href="research/research_01.html" data-toggle="lightbox" data-disable-external-check="true" data-height="768" data-width="1024" class="btn btn-primary">Find Out More!</a>
+            <a href="research/research_01.html" data-toggle="lightbox" data-disable-external-check="true" data-height="768" data-width="1024" class="btn btn-primary">Read</a>
           </div>
         </div>
       </div>
@@ -223,7 +223,7 @@
             <p class="card-text"></p>
           </div>
           <div class="card-footer">
-            <a href="" class="btn btn-primary">Find Out More!</a>
+            <a href="" class="btn btn-primary">Read</a>
           </div>
         </div>
       </div>
