added lightbox for docs, etc.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <h2>About</h2>
         <hr>
         <p>I am Jerry Kiely, an Irish software engineer with over 20 years of experience. I code in Java, Python, Scala, Kotlin, Clojure, Groovy, R, Julia, Ruby, Go, C++, C, etc.</p>
-        <a class="btn btn-primary btn-lg" href="#">More Info &raquo;</a>
+        <a class="btn btn-primary btn-lg" href="http://cowboysmall.com">More &raquo;</a>
       </div>
       <div class="col-md-4 mb-5">
         <h2>Contact</h2>
