--- a/research/research_07.html
+++ b/research/research_07.html
@@ -285,5 +285,17 @@ $(document).ready(function () {
   })();
 </script>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-80671666-3"></script>
+<script type="text/javascript">
+
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-80671666-3');
+
+</script>
+
 </body>
 </html>
