--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
             <li class="nav-item">
               <a class="nav-link" href="http://blog.cowboysmall.com">Blog</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="http://cv.cowboysmall.com">Resume</a>
+            </li>
             <!--
             <li class="nav-item active">
               <a class="nav-link" href="#">Home
