hugo site build test - second attempt

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
   <link rel="shortcut icon" href="favicon.ico">
 
   
-  <link rel="stylesheet" href="http://example.org/assets/vendor/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="http://research.cowboysmall.com/assets/vendor/bootstrap/css/bootstrap.min.css">
   
-  <link rel="stylesheet" href="http://example.org/assets/vendor/ekko-lightbox/css/ekko-lightbox.css">
+  <link rel="stylesheet" href="http://research.cowboysmall.com/assets/vendor/ekko-lightbox/css/ekko-lightbox.css">
   
-  <link rel="stylesheet" href="http://example.org/assets/css/business-frontpage.css">
+  <link rel="stylesheet" href="http://research.cowboysmall.com/assets/css/business-frontpage.css">
 
 
 </head>
@@ -425,11 +425,11 @@
 
   
   
-  <script src="http://example.org/assets/vendor/jquery/jquery.min.js"></script>
-  <script src="http://example.org/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="http://research.cowboysmall.com/assets/vendor/jquery/jquery.min.js"></script>
+  <script src="http://research.cowboysmall.com/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   
-  <script src="http://example.org/assets/vendor/ekko-lightbox/js/ekko-lightbox.min.js"></script>
+  <script src="http://research.cowboysmall.com/assets/vendor/ekko-lightbox/js/ekko-lightbox.min.js"></script>
 
   <script type="text/javascript">
 
