--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   
   <link rel="stylesheet" href="http://research.cowboysmall.com/assets/vendor/bootstrap/css/bootstrap.min.css">
   
+  <link rel="stylesheet" href="http://research.cowboysmall.com/assets/vendor/bootstrap-social/css/bootstrap-social.css">
+  
   <link rel="stylesheet" href="http://research.cowboysmall.com/assets/vendor/ekko-lightbox/css/ekko-lightbox.css">
   
   <link rel="stylesheet" href="http://research.cowboysmall.com/assets/css/business-frontpage.css">
